--- a/templates/blocks/_presentation.html.twig
+++ b/templates/blocks/_presentation.html.twig
@@ -1,13 +1,8 @@
 {% if presentation|default %}
     <div id="caption-border" class="caption js-about">
-        <div class="logo">
-            <div class="logo_img_block">
-                {% include "blocks/components/_logo.html.twig" %}
-            </div>
-        </div>
         <div class="box-caption ">
             <div class="text-caption center-align">
-                <h1><span class="name grey-text text-lighten-1"><a class="al" href="{{path('admin')}}">C</a>harlotte Saidi</span>
+                <h1><span class="name grey-text text-lighten-1">Charlotte Saidi</span>
                 <span class="sep"></span>
                 <span class="job light grey-text">Développeuse Web Junior</span></h1>
             </div>
