--- a/assets/styles/components/_gallery.scss
+++ b/assets/styles/components/_gallery.scss
@@ -74,7 +74,7 @@ body {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(4, 13vw);
         gap: 1rem;
-        width: 90%;
+        width: 95%;
         margin: 0 auto;
         .grid_items {
             .card, .modal-trigger {
@@ -97,14 +97,15 @@ body {
     .slideshow-container {
         max-width: 1000px;
         overflow: hidden;
+        width: 90%;
         position: relative;
-        margin: auto;
+        margin: 0 auto !important;
         .slides {
             display: none;
             img {
                 display:block;
                 width: 100%;
-                height: 500px;
+                height: 50vh;
                 object-fit: cover;
             }
             .slide_text {
@@ -124,27 +125,27 @@ body {
                 animation-name: fade;
                 animation-duration: 1.5s;
             }
-            &:after {
-                content: '';
-                position: absolute;
-                bottom: 0;
-                width: 100%;
-                height: 100%;
-                background-color: transparentize(#031625, .15);
-                transition: height .6s;
-            }
-            &:hover {
-                &:after {
-                    height: 0;
-                }
-                .slide_text {
-                    height: 0;
-                }
-
-            }
             .slide_link {
                 display: block;
                 cursor: pointer;
+                &:after {
+                    content: '';
+                    position: absolute;
+                    bottom: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-color: transparentize(#031625, .15);
+                    transition: height .6s;
+                }
+                &:hover {
+                    &:after {
+                        height: 0;
+                    }
+                    .slide_text {
+                        height: 0;
+                    }
+    
+                }
             }
         }
         .prev, .next {
