--- a/assets/styles/components/_timeline.scss
+++ b/assets/styles/components/_timeline.scss
@@ -122,20 +122,34 @@ body   {
 @media screen and (max-width: 900px) {
   body {
     #timeline {
-      flex-direction: column;
+      font-size: 2vh;
+
+      // flex-direction: column;
       &:hover {
         .tl-item {
-          width: 100%;
+          // width: 100%;
         }
       }
       .tl-item {
-        width: 100%;
-        max-height: initial;
-        height: 8rem;
-        transition: height 0.5s ease;
+        max-height: 50vh;
+        .tl-content {
+          h3, h4 {
+            font-size: 2vh !important;
+          }
+        }
+        // width: 100%;
+        // max-height: initial;
+        // height: 8rem;
+        // transition: height 0.5s ease;
         &:hover {
-          width: initial!important;
-          height: 34rem !important;
+          // width: initial!important;
+          // height: 34rem !important;
+          .tl-year {
+            top: 30%;
+          }
+          .tl-content {
+            top: 35%;
+          }
         }
       }
     }
