--- a/templates/blocks/_contact.html.twig
+++ b/templates/blocks/_contact.html.twig
@@ -1,23 +1,24 @@
-<div id="contact" class="page-footer section scrollspy">
+<div id="contact" class="page-footer bg_white_section row">
+    <div class="logo col s12 l1 center-align" id="logo">
+        CSaidi
+    </div>
     <div class="container">
-        <div class="row">
-            <div class="col s12 m10 push-m1 l8 push-l2">
-                <p class="contact_paragraph center-align">N'hésitez pas à m'envoyer un e-mail à cette adresse : <a href="mailto:charlotte.saidi@outlook.fr">charlotte.saidi@outlook.fr</a> <br> ou à me laisser un message sur le site. Je vous répondrai dans les plus brefs délais.</p>
-                {{ include('blocks/contact/_new.html.twig') }}
-            </div>
-            <div class="col s12">
-                <p class="center-align">Vous pouvez aussi me retrouver sur les sites suivants :</p>
-                <div class="social">
-                    <a class="" href="https://www.linkedin.com/in/charlotte-saidi/" title="Mon Profil LinkedIn" > 
-                        {% include "blocks/components/svgs/_linkedin.html.twig" %}
-                    </a>
-                    <a class="" href="https://github.com/charlottesaidi" title="Mon GitHub" > 
-                        {% include "blocks/components/svgs/_github.html.twig" %}
-                    </a>
-                    <a href="https://www.frontendmentor.io/profile/charlottesaidi" title="Mes Challenges FrontEnd Mentor" >
-                        <img src="{{asset('images/frontend_mentor.webp')}}" alt="FrontEnd Mentor icon" width="30" class="circle">
-                    </a>
-                </div>
+        <div>
+            <p class="contact_paragraph center-align">N'hésitez pas à m'envoyer un e-mail à cette adresse : <a href="mailto:charlotte.saidi@outlook.fr">charlotte.saidi@outlook.fr</a> <br> ou à me laisser un message sur le site. Je vous répondrai dans les plus brefs délais.</p>
+            {{ include('blocks/contact/_new.html.twig') }}
+        </div>
+        <div>
+            <p class="center-align">Vous pouvez aussi me retrouver sur les sites suivants :</p>
+            <div class="social">
+                <a class="" href="https://www.linkedin.com/in/charlotte-saidi/" title="Mon Profil LinkedIn" > 
+                    {% include "blocks/components/svgs/_linkedin.html.twig" %}
+                </a>
+                <a class="" href="https://github.com/charlottesaidi" title="Mon GitHub" > 
+                    {% include "blocks/components/svgs/_github.html.twig" %}
+                </a>
+                <a href="https://www.frontendmentor.io/profile/charlottesaidi" title="Mes Challenges FrontEnd Mentor" >
+                    <img src="{{asset('images/frontend_mentor.webp')}}" alt="FrontEnd Mentor icon" width="30" class="circle">
+                </a>
             </div>
         </div>
     </div>
