--- a/templates/blocks/_project.html.twig
+++ b/templates/blocks/_project.html.twig
@@ -1,53 +1,56 @@
 {% if projects|default %}
 
-    {# GALLERY #}
+{# GALLERY #}
+<div class="bg_white_section">
+    <div class="container">
+        {# Desktop Blocks #}
+        <div class="gallery hide-on-med-and-down">
+            {# {% if tools|default %}
+                <div class="tool_badges row">
+                    {% for tool in tools %}
+                        <a href="#"><span class="badge">{{tool.title}}</span></a>
+                    {% endfor %}
+                </div>
+            {% endif %} #}
 
-    {# Desktop Blocks #}
-    <div class="gallery hide-on-med-and-down">
-        {# {% if tools|default %}
-            <div class="tool_badges row">
-                {% for tool in tools %}
-                    <a href="#"><span class="badge">{{tool.title}}</span></a>
+            {% set rows = (projects|length)/2 %}
+
+            <div class="grid_gallery" style="grid-template-rows: repeat({{rows|round(0, 'floor')}}, 13vw)!important;">
+                {% set i = 0 %}
+                {% for project in projects %}
+                {% set i = i+1 %}
+                <div class="gallery__item--{{i}} grid_items" style="background:url('{{asset('uploads/projets/' ~ project.image)}}'); background-size: cover; background-position: top;">
+                    <div class="hexIn card">
+                        <a class="hexLink modal-trigger hex_modal-trigger" data-target="modal1{{project.id}}" data-project="{{project.id}}">
+                            <h3>{{project.title}}</h3>
+                            {{project.description|raw}}
+                        </a>
+                    </div>
+                </div>
                 {% endfor %}
             </div>
-        {% endif %} #}
+        </div>
 
-        {% set rows = (projects|length)/2 %}
+        {# Mobile Slideshow #}
+        <!-- Slideshow container -->
+        <div class="slideshow-container hide-on-large-only card">
 
-        <div class="grid_gallery" style="grid-template-rows: repeat({{rows|round(0, 'floor')}}, 13vw)!important;">
-            {% set i = 0 %}
+            <!-- Full-width images with number and caption text -->
             {% for project in projects %}
-            {% set i = i+1 %}
-            <div class="gallery__item--{{i}} grid_items" style="background:url('{{asset('uploads/projets/' ~ project.image)}}'); background-size: cover; background-position: top;">
-                <div class="hexIn card">
-                    <a class="hexLink modal-trigger hex_modal-trigger" data-target="modal1{{project.id}}" data-project="{{project.id}}">
-                        <h3>{{project.title}}</h3>
-                        {{project.description|raw}}
+                <div class="slides fade">
+                    <a class="slide_link modal-trigger" data-target="modal1{{project.id}}" data-project="{{project.id}}">
+                        <img src="{{asset('uploads/projets/' ~ project.image)}}" alt="Maquette du projet {{project.title}}" >
+                        <h3 class="slide_text">{{project.title}}</h3>
                     </a>
                 </div>
-            </div>
             {% endfor %}
+
+            <!-- Next and previous buttons -->
+            <a class="prev">&#10094;</a>
+            <a class="next">&#10095;</a>
+
         </div>
     </div>
-
-    {# Mobile Slideshow #}
-    <!-- Slideshow container -->
-    <div class="slideshow-container hide-on-large-only card">
-
-        <!-- Full-width images with number and caption text -->
-        {% for project in projects %}
-            <div class="slides fade">
-                <a class="slide_link modal-trigger" data-target="modal1{{project.id}}" data-project="{{project.id}}">
-                    <img src="{{asset('uploads/projets/' ~ project.image)}}" alt="Maquette du projet {{project.title}}" >
-                    <h3 class="slide_text">{{project.title}}</h3>
-                </a>
-            </div>
-        {% endfor %}
-
-        <!-- Next and previous buttons -->
-        <a class="prev">&#10094;</a>
-        <a class="next">&#10095;</a>
-
-    </div>
+</div>
 
 {% endif %}
